CAKE-5106 Fix buttons hidden on mobile screens

--- a/src/components/Preferences.scss
+++ b/src/components/Preferences.scss
@@ -4,7 +4,7 @@
     position: absolute;
 
     @media #{$mobile-devices} {
-        height: calc(100vh - 55px);
+        height: calc(100% - 55px);
         top: 55px;
         width: 100vw;
     }
