--- a/src/components/ScreenOne.scss
+++ b/src/components/ScreenOne.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
 
     @media #{$mobile-devices} {
-        max-height: calc(100vh - 55px);
+        max-height: calc(100% - 55px);
         position: absolute;
         width: 100vw;
     }
